force-app/main/default/objects/BGR_Guideline__c/BGR_Guideline__c.object-meta.xml
<CustomObject>
    <label>BGR Guideline</label>
    <nameField>
        <displayFormat>BG-{0000}</displayFormat>
        <label>BGR Guideline Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BGR Guidelines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>