force-app/main/default/objects/BGR_Guideline__c/fields/Guideline_Description__c.field-meta.xml
<CustomField>
    <fullName>Guideline_Description__c</fullName>
    <label>Guideline Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>