force-app/main/default/objects/BGR_Guideline__c/fields/Sign_Off_Required__c.field-meta.xml
<CustomField>
    <fullName>Sign_Off_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sign-Off Required</label>
    <type>Checkbox</type>
</CustomField>