force-app/main/default/objects/BGR_Guideline__c/fields/XRAY__c.field-meta.xml
<CustomField>
    <fullName>XRAY__c</fullName>
    <label>XRAY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>CONFIRM</fullName>
            </value>
            <value>
                <fullName>CHEMICAL</fullName>
            </value>
            <value>
                <fullName>CRITICAL</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>